# Trent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Trent/: Trent.sln
interpreter/: CMakeLists.txt  TrentInterpreter.cpp  TrentInterpreter.h  main.cpp
interpreter/AST/: AST.h  ASTArrayValueNode.cpp  ASTArrayValueNode.h  ASTAssignmentNode.cpp  ASTBooleanOperatorNode.cpp  ASTBooleanOperatorNode.h  ASTBreakStatementNode.cpp  ASTBreakStatementNode.h  ASTClassInstantiationNode.cpp  ASTClassInstantiationNode.h  ASTClassNode.cpp  ASTClassNode.h  ASTExpressionNode.h  ASTForLoopNode.cpp  ASTForLoopNode.h  ASTFunctionCallNode.cpp  ASTFunctionCallNode.h  ASTFunctionDeclarationNode.cpp  ASTFunctionDeclarationNode.h  ASTIfElseStatementNode.cpp  ASTIfElseStatementNode.h  ASTLiteralValueNode.cpp  ASTLiteralValueNode.h  ASTNode.h  ASTProgramNode.cpp  ASTProgramNode.h  ASTReturnStatementNode.cpp  ASTReturnStatementNode.h  ASTVariableNode.cpp  ASTWhileLoopNode.cpp  ASTWhileLoopNode.h  CMakeLists.txt
interpreter/Parser/: CMakeLists.txt  IdentifierToken.cpp  IdentifierToken.h  KeywordToken.h  LiteralValueToken.h  OperatorToken.h  SymbolToken.h  Token.cpp  Token.h  TrentLexer.cpp  TrentLexer.h  TrentParser.cpp  TrentParser.h
interpreter/TrentStd/: CMakeLists.txt  TrentStandardLibrary.cpp  TrentStandardLibrary.h
runtime/: CMakeLists.txt  Trent.h  TrentArray.cpp  TrentArray.h  TrentBoolean.cpp  TrentBoolean.h  TrentCore.h  TrentFloat.cpp  TrentFloat.h  TrentInteger.cpp  TrentInteger.h  TrentObject.cpp  TrentObject.h  TrentRuntime.cpp  TrentRuntime.h  TrentString.cpp  TrentString.h  TrentTuple.cpp  TrentTuple.h
tests/: arrays.trent  (+5 more)
(+42 files in other folders)
